Initial version of rnap/torque perturbations

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3333,7 +3333,7 @@
     "fig_zinani_mRNA_axes = fig_zinani_subfigures['C'].subplots(ncols=2, sharey=False, gridspec_kw={'wspace': 0.28})\n",
     "for ax, condition in zip(fig_zinani_mRNA_axes, ['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled']):\n",
     "    df = fig_zinani_examples[(fig_zinani_examples.condition == condition) & (fig_zinani_examples.alpha == plot_alpha)]\n",
-    "    idx = df.idx.unique()[1]\n",
+    "    idx = df.idx.unique()[2]\n",
     "    if condition.endswith('tangles-coupled'):\n",
     "        tangles_idx = idx\n",
     "    sns.lineplot(data=df[df.idx == idx], x='time', y='her1_mRNA', ax=ax, color=fig_zinani_palette['her1'])\n",
@@ -3682,11 +3682,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('env': venv)",
+   "display_name": "Python 3.7.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -3700,7 +3697,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
+   }
   }
  },
  "nbformat": 4,
