--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -906,16 +906,8 @@
     "# Load Kasey's lentivirus Cellprofiler dataset\n",
     "lentivirus_primary_objects = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'images'/'viral_analysisIdentifyPrimaryObjects.csv', 'lentivirus_images'))\n",
     "lentivirus_conditions = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'images'/'viral_analysisImage.csv')).set_index('ImageNumber')\n",
-    "lentivirus_data = lentivirus_primary_objects.join(lentivirus_conditions, 'ImageNumber')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lentivirus_data.columns"
+    "lentivirus_data = lentivirus_primary_objects.join(lentivirus_conditions, 'ImageNumber')\n",
+    "lentivirus_data['Intensity_MaxIntensity_Red'] *= 4.0"
    ]
   },
   {
@@ -928,19 +920,240 @@
     "sns.kdeplot(data=lentivirus_data, x='Intensity_MaxIntensity_Red', hue='Metadata_Condition', palette={'tandem': main_palette['tandem'], 'divergent': main_palette['divergent']}, legend=None)\n",
     "sns.despine()\n",
     "plt.xlabel('Max cell intensity')\n",
-    "plt.text(0.02, 7, 'Tandem', color=main_palette['tandem'])\n",
-    "plt.text(0.02, 6.4, 'Divergent', color=main_palette['divergent'])\n",
+    "plt.text(0.02, 1.5, 'Tandem', color=main_palette['tandem'])\n",
+    "plt.text(0.02, 1.7, 'Divergent', color=main_palette['divergent'])\n",
     "plt.savefig(rd.outfile(rd.rootdir/'img'/'presentation_viral_context.svg', 'lentivirus_images'), bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_examples.gzip').exists():\n",
+    "    fig_zinani_examples = pd.read_parquet(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_examples.gzip', 'fig_zinani'))\n",
+    "    print(f'Loaded {len(fig_zinani_examples)} total example datapoints from Parquet cached file')\n",
+    "else:\n",
+    "    with h5py.File(\n",
+    "        rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'modeling_model_zinani_tangles_sims.h5', 'fig_zinani_cache'), 'r') as fig5_raw:\n",
+    "        n_examples = 5\n",
+    "        example_counts = {}\n",
+    "        fig_zinani_examples = []\n",
+    "        i = 1\n",
+    "        for group in fig5_raw.keys():\n",
+    "            for run in fig5_raw[group].values():\n",
+    "                run_shape = run['mRNA'].shape\n",
+    "                condition = run.attrs['comment'].decode('utf-8')\n",
+    "                temperature = run.attrs['temperature']\n",
+    "                alpha = run.attrs['coeff.sigma_squared']\n",
+    "                c_tup = (condition, alpha, temperature)\n",
+    "                if c_tup not in example_counts or example_counts[c_tup] < n_examples:\n",
+    "                    fig_zinani_examples.append(pd.DataFrame(data={\n",
+    "                        'condition': condition,\n",
+    "                        'alpha': alpha,\n",
+    "                        'temperature': temperature,\n",
+    "                        'time': run['time'],\n",
+    "                        'her1_mRNA': run['mRNA'][:,0,0],\n",
+    "                        'her7_mRNA': run['mRNA'][:,1,0],\n",
+    "                        'her1_protein': run['discrete_components'][:,0,0],\n",
+    "                        'her7_protein': run['discrete_components'][:,1,0],\n",
+    "                        'hes6_protein': run['discrete_components'][:,2,0],\n",
+    "                        'her1_promoter_empty': run['discrete_components'][:,3,0],\n",
+    "                        'her7_promoter_empty': run['discrete_components'][:,4,0],\n",
+    "                        'her1_promoter_with_11': run['discrete_components'][:,5,0],\n",
+    "                        'her1_promoter_with_76': run['discrete_components'][:,6,0],\n",
+    "                        'her7_promoter_with_11': run['discrete_components'][:,7,0],\n",
+    "                        'her7_promoter_with_76': run['discrete_components'][:,8,0],\n",
+    "                        'idx': i\n",
+    "                    }))\n",
+    "                    i += 1\n",
+    "                    if c_tup not in example_counts:\n",
+    "                        example_counts[c_tup] = 1\n",
+    "                    else:\n",
+    "                        example_counts[c_tup] += 1\n",
+    "        fig_zinani_examples = pd.concat(fig_zinani_examples)\n",
+    "        print(f'Loaded {len(fig_zinani_examples)} example datapoints!')\n",
+    "        fig_zinani_examples.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_examples.gzip', 'fig_zinani_cache'), compression='gzip')\n",
+    "tangles_signal_length = len(fig_zinani_examples[fig_zinani_examples.time > 2000].time.unique())\n",
+    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_summaries.gzip').exists():\n",
+    "    fig_zinani_df = pd.read_parquet(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_summaries.gzip', 'fig_zinani'))\n",
+    "    print(f'Loaded {len(fig_zinani_df)} simulation runs from Parquet cached file')\n",
+    "else:\n",
+    "    with h5py.File(\n",
+    "        rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'modeling_model_zinani_tangles_sims.h5', 'fig_zinani_cache'), 'r') as fig5_raw:\n",
+    "        fig_zinani_df = []\n",
+    "        i = 0\n",
+    "        # Extract the Spearman correlation between the two mRNA values\n",
+    "        # alongside storing the mean-centered correlation and auto-correlation\n",
+    "        # of the two.\n",
+    "        for group in fig5_raw.keys():\n",
+    "            group_df = []\n",
+    "            for run in fig5_raw[group].values():\n",
+    "                run_shape = run['mRNA'].shape\n",
+    "                mRNA = run['mRNA'][:,:,:]\n",
+    "                for subrun in range(run_shape[2]):\n",
+    "                    time = run['time'][:]\n",
+    "                    # Perform correlation over the entire range\n",
+    "                    her1 = mRNA[:,0,subrun]\n",
+    "                    her7 = mRNA[:,1,subrun]\n",
+    "                    trimmed_her1 = her1[time > 2000]\n",
+    "                    trimmed_her7 = her7[time > 2000]\n",
+    "                    mc_her1 = trimmed_her1 - np.mean(trimmed_her1)\n",
+    "                    mc_her7 = trimmed_her7 - np.mean(trimmed_her7)\n",
+    "                    sc, _ = scipy.stats.spearmanr(her1, her7)\n",
+    "                    cross_corr = scipy.signal.correlate(mc_her1, mc_her7)\n",
+    "                    autocorr_correction = np.sqrt(\n",
+    "                        scipy.signal.correlate(mc_her1, mc_her1, mode='valid')[0] * \n",
+    "                        scipy.signal.correlate(mc_her7, mc_her7, mode='valid')[0])\n",
+    "                    group_df.append(pd.DataFrame(data={\n",
+    "                        'spearman_corr': sc,\n",
+    "                        'cross_corr': (cross_corr,),\n",
+    "                        'autocorr_correction': autocorr_correction if autocorr_correction != 0.0 else 1.0,\n",
+    "                        'mean_amplitude': mean_amplitude(her1),\n",
+    "                        'final_her7': her7[-1],\n",
+    "                        'condition': run.attrs['comment'].decode('utf-8'),\n",
+    "                        'alpha': run.attrs['coeff.sigma_squared'],\n",
+    "                        'temperature': run.attrs['temperature'],\n",
+    "                        'idx': i}))\n",
+    "                    i += 1\n",
+    "            fig_zinani_df.append(pd.concat(group_df, ignore_index=True))\n",
+    "            print(f'Loaded {len(fig_zinani_df[-1])} simulations...')\n",
+    "    # Load matlab simulations\n",
+    "    print(f'Loading Matlab simulations...')\n",
+    "    fig_zinani_matlab_df = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'zinani_matlab.csv', 'fig_zinani'))\n",
+    "    fig_zinani_matlab_df['time'] = fig_zinani_matlab_df['time_min'] * 60.0\n",
+    "    tangles_signal_length = len(fig_zinani_examples[fig_zinani_examples.time > 2000].time.unique())\n",
+    "    matlab_signal_length = len(fig_zinani_matlab_df[(fig_zinani_matlab_df.idx == 1) & (fig_zinani_matlab_df.condition == 'Paired')])\n",
+    "    tangles_lags = scipy.signal.correlation_lags(tangles_signal_length, tangles_signal_length) * np.diff(fig_zinani_examples.time.unique())[0]\n",
+    "    matlab_lags = scipy.signal.correlation_lags(matlab_signal_length,matlab_signal_length) * np.diff(fig_zinani_matlab_df[fig_zinani_matlab_df.idx == 1].time.unique())[0]\n",
+    "    # Split each dataframe by signal length\n",
+    "    for n in range(int(len(fig_zinani_matlab_df) / matlab_signal_length)):\n",
+    "        run_df = fig_zinani_matlab_df.iloc[(n*matlab_signal_length):((n+1)*matlab_signal_length),:]\n",
+    "        her1 = run_df['her1']\n",
+    "        her7 = run_df['her7']\n",
+    "        mc_her1 = her1 - np.mean(her1)\n",
+    "        mc_her7 = her7 - np.mean(her7)\n",
+    "        sc, _ = scipy.stats.spearmanr(her1, her7)\n",
+    "        cross_corr = scipy.signal.correlate(mc_her1, mc_her7)\n",
+    "        autocorr_correction = np.sqrt(\n",
+    "            scipy.signal.correlate(mc_her1, mc_her1, mode='valid')[0] * \n",
+    "            scipy.signal.correlate(mc_her7, mc_her7, mode='valid')[0])\n",
+    "        # Resample cross correlation to the same timescale\n",
+    "        resample_cross_corr = np.interp(tangles_lags, matlab_lags, cross_corr)\n",
+    "        fig_zinani_df.append(pd.DataFrame(data={\n",
+    "            'spearman_corr': sc,\n",
+    "            'cross_corr': (resample_cross_corr,),\n",
+    "            'autocorr_correction': autocorr_correction,\n",
+    "            'condition': 'matlab.' + run_df['condition'].iloc[0],\n",
+    "            'idx': i\n",
+    "        }))\n",
+    "        i += 1\n",
+    "    fig_zinani_df = pd.concat(fig_zinani_df, ignore_index=True)\n",
+    "    print(f'Loaded {len(fig_zinani_df)} total simulations!')\n",
+    "    fig_zinani_df.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_summaries.gzip', 'fig_zinani_cache'), compression='gzip')\n",
+    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip').exists():\n",
+    "    fig_zinani_matlab_examples = pd.read_parquet(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip', 'fig_zinani'))\n",
+    "    print(f'Loaded {len(fig_zinani_matlab_examples)} total example datapoints from Parquet cached file')\n",
+    "else:\n",
+    "    print(f'Loading Matlab examples...')\n",
+    "    fig_zinani_matlab_examples = []\n",
+    "    fig_zinani_matlab_df = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'zinani_matlab.csv', 'fig_zinani_cache'))\n",
+    "    fig_zinani_matlab_df['time'] = fig_zinani_matlab_df['time_min'] * 60.0\n",
+    "    matlab_signal_length = len(fig_zinani_matlab_df[(fig_zinani_matlab_df.idx == 1) & (fig_zinani_matlab_df.condition == 'Paired')])\n",
+    "    example_counts = {'Paired': 0, 'Unpaired': 0}\n",
+    "    for n in range(int(len(fig_zinani_matlab_df) / matlab_signal_length)):\n",
+    "        run_df = fig_zinani_matlab_df.iloc[(n*matlab_signal_length):((n+1)*matlab_signal_length),:]\n",
+    "        time = run_df['time']\n",
+    "        her1 = run_df['her1']\n",
+    "        her7 = run_df['her7']\n",
+    "        condition = run_df['condition'].iloc[0]\n",
+    "        if example_counts[condition] < 5:\n",
+    "            fig_zinani_matlab_examples.append(pd.DataFrame({\n",
+    "                'time': time,\n",
+    "                'her1': her1,\n",
+    "                'her7': her7,\n",
+    "                'condition': f'matlab.{condition}',\n",
+    "                'idx': example_counts[condition]\n",
+    "            }))\n",
+    "            example_counts[condition] += 1\n",
+    "        if example_counts['Paired'] > 5 and example_counts['Unpaired'] > 5:\n",
+    "            break\n",
+    "\n",
+    "    fig_zinani_matlab_examples = pd.concat(fig_zinani_matlab_examples)\n",
+    "    print(f'Loaded {len(fig_zinani_matlab_examples)} example datapoints!')\n",
+    "    fig_zinani_matlab_examples.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_zinani_matlab_examples.gzip', 'fig_zinani_cache'), compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare cross-correlation data\n",
+    "fig_zinani_crosscorr = fig_zinani_df.groupby(['condition', 'alpha'], dropna=False).apply(lambda df:np.vstack(df.cross_corr / df.autocorr_correction).mean(axis=0)).reset_index()\n",
+    "fig_zinani_crosscorr.insert(2, 'time_delay', 11 * [scipy.signal.correlation_lags(tangles_signal_length, tangles_signal_length) * np.diff(fig_zinani_examples.time.unique())[0]])\n",
+    "fig_zinani_crosscorr = fig_zinani_crosscorr.rename(columns={0:'cross_correlation'})\n",
+    "fig_zinani_crosscorr = fig_zinani_crosscorr.explode(['time_delay', 'cross_correlation'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_zinani_palette = {\n",
+    "    'her1': '#5254a3',\n",
+    "    'her7': '#9c9ede',\n",
+    "    'matlab.Unpaired': '#AAAAAA',\n",
+    "    'matlab.Paired': main_palette['gray'],\n",
+    "    'fig.zinani.uncoupled': main_palette['light_gray'],\n",
+    "    'fig.zinani.fully-coupled': main_palette['gray'],\n",
+    "    'fig.zinani.tangles-coupled': main_palette['divergent'],\n",
+    "    'gray': main_palette['gray'],\n",
+    "    'background_gray': '#DDDDDD'\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_alpha = 0.025\n",
+    "# Plot cross-correlation plot\n",
+    "plt.figure(figsize=(4,3))\n",
+    "fig_zinani_crosscorr_ax = plt.gca()\n",
+    "fig_zinani_crosscorr_ax.axhline(y=0, color='k')\n",
+    "fig_zinani_crosscorr_ax.axvline(x=0, color='#888888', linestyle=':')\n",
+    "for condition in ['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled']:\n",
+    "    sns.lineplot(data=fig_zinani_crosscorr[(fig_zinani_crosscorr.condition == condition) & (fig_zinani_crosscorr.alpha == plot_alpha)].reset_index(), x='time_delay', y='cross_correlation',\n",
+    "        hue='condition', palette=fig_zinani_palette, ax=fig_zinani_crosscorr_ax, ci=None, legend=None)\n",
+    "sns.despine(ax=fig_zinani_crosscorr_ax)\n",
+    "fig_zinani_crosscorr_ax.set_xlim([-4000,4000])\n",
+    "fig_zinani_crosscorr_ax.set_xticks(np.linspace(-3600,3600, 5))\n",
+    "fig_zinani_crosscorr_ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
+    "#fig_zinani_crosscorr_ax.set_ylim([-.3, 0.75])\n",
+    "#fig_zinani_crosscorr_ax.set_yticks(np.arange(-0.25, 1.0, 0.25))\n",
+    "fig_zinani_crosscorr_ax.set_xlabel('Time delay (hr)')\n",
+    "fig_zinani_crosscorr_ax.set_ylabel('Cross-correlation')\n",
+    "fig_zinani_crosscorr_ax.text(900, 0.6, 'Dimer only', color=fig_zinani_palette['fig.zinani.uncoupled'], ha='left')\n",
+    "fig_zinani_crosscorr_ax.text(900, 0.5, 'Dimer + biophysical coupling', color=fig_zinani_palette['fig.zinani.tangles-coupled'], ha='left')\n",
+    "plt.savefig(rd.outfile(rd.rootdir/'img'/'presentation_zinani_cross_correlation.svg', 'fig_zinani'), bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
+   "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('env': venv)",
+   "display_name": "Python 3.9.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -954,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
