--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -1320,6 +1320,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Supplemental figure - energy and torque for modified scenarios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'sigma_sweep.h5', 'fig_supp_alpha'), 'r') as sigma_h5:\n",
+    "    alpha_sweep_df = pd.concat([\n",
+    "        pd.DataFrame({\n",
+    "            'sigma': sigma_h5['sweep']['sigma'],\n",
+    "            'alpha': sigma_h5['sweep']['s2_coeff'][a_idx],\n",
+    "            'energy': sigma_h5['sweep']['values'][a_idx,:]\n",
+    "        }) for a_idx in range(len(sigma_h5['sweep']['s2_coeff']))\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Supplemental figure - hyperparameter sweep"
    ]
   },
@@ -2251,7 +2274,7 @@
     "                        example_counts[c_tup] = 1\n",
     "                    else:\n",
     "                        example_counts[c_tup] += 1\n",
-    "        fig_toggles_examples = pd.concat(fig_toggle_examples)\n",
+    "        fig_toggles_examples = pd.concat(fig_toggles_examples)\n",
     "        print(f'Loaded {len(fig_toggles_examples)} example datapoints!')\n",
     "        fig_toggles_examples.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_toggles_examples.gzip', 'fig_toggle_examples_cache'), compression='gzip')"
    ]
@@ -3683,7 +3706,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('env': venv)",
+   "display_name": "Python 3.9.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -3697,11 +3720,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
+    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
    }
   }
  },
