Updated figure to show perturbed energy landscapes

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -1050,6 +1050,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "alpha_values = [0.0, 0.01, 0.02, 0.025, 0.03, 0.0316, 0.05]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig_supp_alpha = plt.figure(figsize=(6,7.5))\n",
     "fig_supp_alpha_gridspec = gridspec.GridSpec(5, 1, figure=fig_supp_alpha,\n",
     "    wspace=0.1, hspace=0.15)\n",
@@ -1064,7 +1073,6 @@
     "    subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=font_sizes['subpanel_label'], fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
     "    subfig.subplots_adjust(left=0.1, bottom=0.3, right=0.95, top=0.8)\n",
     "unique_alphas = sorted(base_model_df['coeff.sigma_squared'].unique())\n",
-    "alpha_values = [0.0, 0.01, 0.02, 0.025, 0.03, 0.0316, 0.05]\n",
     "fig_supp_alpha_induction = fig_supp_alpha_subfigures['A'].subplots(ncols=3, sharey=True)\n",
     "for ax, induction in zip(fig_supp_alpha_induction,[0.1, 1.0, 2.0]):\n",
     "    df_at_induction = df_alpha_sweep[np.abs(df_alpha_sweep.norm_induction - induction) == min(np.abs(df_alpha_sweep.norm_induction - induction))]\n",
@@ -1329,14 +1337,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'sigma_sweep.h5', 'fig_supp_alpha'), 'r') as sigma_h5:\n",
-    "    alpha_sweep_df = pd.concat([\n",
-    "        pd.DataFrame({\n",
-    "            'sigma': sigma_h5['sweep']['sigma'],\n",
-    "            'alpha': sigma_h5['sweep']['s2_coeff'][a_idx],\n",
-    "            'energy': sigma_h5['sweep']['values'][a_idx,:]\n",
-    "        }) for a_idx in range(len(sigma_h5['sweep']['s2_coeff']))\n",
-    "    ])"
+    "with h5py.File(rd.infile(rd.rootdir/'output'/'energy_perturbation_plots.h5'), 'r') as perturb_h5:\n",
+    "    perturbation_df = []\n",
+    "    for group in perturb_h5.keys():\n",
+    "        perturbation_df.append(pd.concat([\n",
+    "            pd.DataFrame({\n",
+    "                'sigma': perturb_h5[group]['sigma'],\n",
+    "                'alpha': perturb_h5[group]['s2_coeff'][a_idx],\n",
+    "                'energy': perturb_h5[group]['initiation_energy'][a_idx,:],\n",
+    "                'torque': perturb_h5[group]['torque'][a_idx,:],\n",
+    "                'torque_perturb_type': perturb_h5[group].attrs['torque_perturb'].decode(),\n",
+    "                'rnap_perturb': perturb_h5[group].attrs['rnap_perturb'].decode()\n",
+    "            }) for a_idx in range(len(perturb_h5[group]['s2_coeff']))\n",
+    "        ]))\n",
+    "    perturbation_df = pd.concat(perturbation_df, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perturbation_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "supp_fig_perturbations = plt.figure(figsize=(6.50,4))\n",
+    "supp_fig_perturbations_gridspec = gridspec.GridSpec(3, 1, figure=supp_fig_perturbations,\n",
+    "    wspace=0.1, hspace=0.15)\n",
+    "supp_fig_perturbations_subfigures = {\n",
+    "    'A': supp_fig_perturbations.add_subfigure(supp_fig_perturbations_gridspec[0,0]),\n",
+    "    'B': supp_fig_perturbations.add_subfigure(supp_fig_perturbations_gridspec[1,0]),\n",
+    "    'C': supp_fig_perturbations.add_subfigure(supp_fig_perturbations_gridspec[2,0]),\n",
+    "}\n",
+    "for label, subfig in supp_fig_perturbations_subfigures.items():\n",
+    "    subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=font_sizes['subpanel_label'],\n",
+    "        fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
+    "\n",
+    "original_plots = supp_fig_perturbations_subfigures['A'].subplots(nrows=2, ncols=len(alpha_values), sharex=True, gridspec_kw={'hspace':0.4, 'wspace':0.4})\n",
+    "buffering_plots = supp_fig_perturbations_subfigures['B'].subplots(nrows=2, ncols=len(alpha_values), sharex=True, gridspec_kw={'hspace':0.4, 'wspace':0.4})\n",
+    "energy_well_plots = supp_fig_perturbations_subfigures['C'].subplots(nrows=2, ncols=len(alpha_values), sharex=True, gridspec_kw={'hspace':0.4, 'wspace':0.4})\n",
+    "for idx, alpha in enumerate(alpha_values):\n",
+    "    alpha_df = perturbation_df[\n",
+    "        np.abs(perturbation_df.alpha - alpha) == min(np.abs(perturbation_df.alpha - alpha))\n",
+    "    ]\n",
+    "    original_df = alpha_df[(alpha_df.torque_perturb_type=='original')&(alpha_df.rnap_perturb=='original')]\n",
+    "    buffer_df = alpha_df[(alpha_df.torque_perturb_type=='buffering')&(alpha_df.rnap_perturb=='original')]\n",
+    "    well_df = alpha_df[(alpha_df.torque_perturb_type=='original')&(alpha_df.rnap_perturb=='energy_well')]\n",
+    "\n",
+    "    for ax in itertools.chain(original_plots.flatten(), buffering_plots.flatten(), energy_well_plots.flatten()):\n",
+    "        ax.axhline(0, color=main_palette['gray'])\n",
+    "        ax.axvline(0, color=main_palette['gray'])\n",
+    "        sns.despine(ax=ax)\n",
+    "    original_plots[0,idx].plot(original_df.sigma, original_df.torque, color='k')\n",
+    "    original_plots[1,idx].plot(original_df.sigma, original_df.energy, color='k')\n",
+    "    buffering_plots[0,idx].plot(buffer_df.sigma, buffer_df.torque, color='k')\n",
+    "    buffering_plots[1,idx].plot(buffer_df.sigma, buffer_df.energy, color='k')\n",
+    "    energy_well_plots[0,idx].plot(well_df.sigma, well_df.torque, color='k')\n",
+    "    energy_well_plots[1,idx].plot(well_df.sigma, well_df.energy, color='k')\n",
+    "\n",
+    "    for t_ax in itertools.chain(original_plots[0,:], buffering_plots[0,:], energy_well_plots[0,:]):\n",
+    "        t_ax.set_ylim(-25,25)\n",
+    "    for e_ax in itertools.chain(original_plots[1,:], buffering_plots[1,:], energy_well_plots[1,:]):\n",
+    "        e_ax.set_ylim(-250,250)\n",
+    "plt.show(supp_fig_perturbations)"
    ]
   },
   {
@@ -3706,7 +3776,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('env': venv)",
+   "display_name": "Python 3.7.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -3720,11 +3790,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
+    "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
    }
   }
  },
