Updated zinani topo analysis

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3739,15 +3739,16 @@
     "    fig_zinani_topo_crosscorr_ax.set_xlim([-4000,4000])\n",
     "    fig_zinani_topo_crosscorr_ax.set_xticks(np.linspace(-3600,3600, 5))\n",
     "    fig_zinani_topo_crosscorr_ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
-    "    #fig_zinani_topo_crosscorr_ax.set_ylim([-.3, 0.75])\n",
-    "    #fig_zinani_topo_crosscorr_ax.set_yticks(np.arange(-0.25, 1.0, 0.25))\n",
+    "    fig_zinani_topo_crosscorr_ax.set_ylim([-.33, 0.75])\n",
+    "    fig_zinani_topo_crosscorr_ax.set_yticks(np.arange(-0.25, 1.0, 0.25))\n",
     "    fig_zinani_topo_crosscorr_ax.set_xlabel('Time delay (hr)')\n",
     "    fig_zinani_topo_crosscorr_ax.set_ylabel('Cross-correlation')\n",
     "    fig_zinani_topo_crosscorr_ax.text(900, 0.6, 'Unpaired', color=fig_zinani_topo_palette['fig.zinani.uncoupled'], ha='left')\n",
     "    fig_zinani_topo_crosscorr_ax.text(900, 0.5, 'Paired', color=fig_zinani_topo_palette['fig.zinani.tangles-coupled'], ha='left')\n",
-    "    fig_zinani_topo.text(0.5, 0.2, topo_type)\n",
+    "    fig_zinani_topo_subfigures['C'].text(0.5, 1.1, f'topo type: {topo_type}', ha='center', fontsize=font_sizes['subpanel_label'], fontweight='bold')\n",
     "    fig_zinani_topo.savefig('test.svg')\n",
-    "    fig_zinani_topo.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/f'fig_zinani_topo_{topo_type}_mpl.svg', 'fig_zinani_topo'))"
+    "    fig_zinani_topo.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/f'fig_zinani_topo_{topo_type}_mpl.svg', 'fig_zinani_topo'))\n",
+    "    fig_zinani_topo.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/f'fig_zinani_topo_{topo_type}_mpl.pdf', 'fig_zinani_topo'))"
    ]
   },
   {
