Switched to using generated topoisomerase_type metadata entry

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3546,7 +3546,7 @@
     "                run_shape = run['mRNA'].shape\n",
     "                condition = run.attrs['comment'].decode('utf-8')\n",
     "                temperature = run.attrs['temperature']\n",
-    "                topo_type = run.attrs['topo'].decode('utf-8')\n",
+    "                topo_type = run.attrs['topoisomerase_type'].decode('utf-8')\n",
     "                alpha = run.attrs['coeff.sigma_squared']\n",
     "                c_tup = (topo_type, condition, alpha, temperature)\n",
     "                if c_tup not in example_counts or example_counts[c_tup] < n_examples:\n",
@@ -3614,7 +3614,7 @@
     "                        'autocorr_correction': autocorr_correction if autocorr_correction != 0.0 else 1.0,\n",
     "                        'mean_amplitude': mean_amplitude(her1),\n",
     "                        'final_her7': her7[-1],\n",
-    "                        'topo_type': run.attrs['topo'].decode('utf-8'),\n",
+    "                        'topo_type': run.attrs['topoisomerase_type'].decode('utf-8'),\n",
     "                        'condition': run.attrs['comment'].decode('utf-8'),\n",
     "                        'alpha': run.attrs['coeff.sigma_squared'],\n",
     "                        'temperature': run.attrs['temperature'],\n",
