Updated base model figure with new normalization

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -324,6 +324,7 @@
     "no_white_greens = matplotlib.colors.ListedColormap(cm.get_cmap('Greens', 256)(np.linspace(0.2,1.0,256)))\n",
     "k_formatter = matplotlib.ticker.FuncFormatter(lambda x, _: f'{x:.0f}' if abs(x) < 1000 else f'{x/1000:.0f}k')\n",
     "fold_formatter = matplotlib.ticker.FuncFormatter(lambda x, _: f'{x}x')\n",
+    "fold_nf_formatter = lambda n: matplotlib.ticker.FuncFormatter(lambda x, _: f'{x:.{n}f}x')\n",
     "hours_formatter = matplotlib.ticker.FuncFormatter(lambda x,_: f'{x/3600:.0f}')\n",
     "hours_1f_formatter = matplotlib.ticker.FuncFormatter(lambda x,_: f'{x/3600:.1f}')"
    ]
@@ -703,7 +704,9 @@
     "].copy()\n",
     "df_bm_bcs['condition'] = df_bm_bcs['condition'].cat.remove_unused_categories()\n",
     "df_bm_bcs['norm_induction'] = df_bm_bcs['induction'] / (1.0 / 120.0)\n",
-    "df_bm_bcs['constant_mRNA'] = df_bm_bcs['constant_mRNA'] / 250.0\n",
+    "df_bm_bcs.loc[df_bm_bcs.is_plasmid==0.0, 'constant_mRNA'] /= 250.0\n",
+    "df_bm_bcs.loc[df_bm_bcs.is_plasmid==1.0, 'constant_mRNA'] /= 10.0\n",
+    "#df_bm_bcs['constant_mRNA'] = df_bm_bcs['constant_mRNA'] / 250.0\n",
     "fig_bm_subfigures['B'].subplots_adjust(left=0.35, bottom=0.36, right=0.9, top=0.8)\n",
     "fig_bm_bcs_axes = fig_bm_subfigures['B'].subplots(ncols=2, gridspec_kw={'wspace': 0.5})\n",
     "for ax in fig_bm_bcs_axes:\n",
@@ -720,11 +723,16 @@
     "sns.despine(ax=fig_bm_bcs_axes[0])\n",
     "for ax in fig_bm_bcs_axes:\n",
     "    ax.set_xlabel('Fold induction')\n",
-    "    ax.set_ylabel('Reporter output')\n",
+    "    ax.set_ylabel('Fold reporter\\noutput')\n",
     "    ax.set_xlim([0.0, 2.0])\n",
     "    ax.set_xticks([0.0, 1.0, 2.0])\n",
     "    ax.set_xticklabels(['0x', '1x', '2x'])\n",
-    "    ax.set_ylim([0.0, 1.4])\n",
+    "fig_bm_bcs_axes[0].set_ylim([0.0, 30.0])\n",
+    "fig_bm_bcs_axes[0].set_yticks([1.0, 15.0, 30.0])\n",
+    "fig_bm_bcs_axes[0].yaxis.set_major_formatter(fold_nf_formatter(0))\n",
+    "fig_bm_bcs_axes[1].set_ylim([0.0, 1.4])\n",
+    "fig_bm_bcs_axes[1].set_yticks([0.0, 0.5, 1.0])\n",
+    "fig_bm_bcs_axes[1].yaxis.set_major_formatter(fold_nf_formatter(1))\n",
     "\n",
     "fig_bm_subfigures['B'].text(0.79, 0.85, 'Linear', ha='center', fontsize=font_sizes['base_size'])\n",
     "fig_bm_subfigures['B'].text(0.46, 0.85, 'Circular', ha='center', fontsize=font_sizes['base_size'])\n",
@@ -740,7 +748,11 @@
    "source": [
     "# Plot distribution data\n",
     "fig_bm_noise_axes = []\n",
-    "for is_plasmid, subfig, noise_offset in zip([0,1], [fig_bm_subfigures[x] for x in 'DC'], [[-0.06,0], [0.3,0]]):\n",
+    "for is_plasmid, subfig, noise_offset, noise_scale in zip(\n",
+    "        [0,1],\n",
+    "        [fig_bm_subfigures[x] for x in 'DC'],\n",
+    "        [[-0.04,0], [18,0]],\n",
+    "        [1.0, 26.0]):\n",
     "    df_bm_dist = base_model_df[\n",
     "        (\n",
     "            base_model_df['is_plasmid'] == is_plasmid\n",
@@ -757,8 +769,12 @@
     "        )\n",
     "    ].copy()\n",
     "    df_bm_dist['condition'] = df_bm_dist['condition'].cat.remove_unused_categories()\n",
-    "    df_bm_dist['norm_reporter']  = df_bm_dist['constant_mRNA'] / 340.0\n",
-    "    df_bm_dist['norm_inducible'] = df_bm_dist['inducible_mRNA'] / 340.0\n",
+    "    df_bm_dist['norm_reporter'] = df_bm_dist.constant_mRNA\n",
+    "    df_bm_dist['norm_inducible'] = df_bm_dist.inducible_mRNA\n",
+    "    df_bm_dist.loc[df_bm_dist.is_plasmid==0.0, 'norm_reporter'] /= 250.0\n",
+    "    df_bm_dist.loc[df_bm_dist.is_plasmid==0.0, 'norm_inducible'] /= 250.0\n",
+    "    df_bm_dist.loc[df_bm_dist.is_plasmid==1.0, 'norm_reporter'] /= 10.0\n",
+    "    df_bm_dist.loc[df_bm_dist.is_plasmid==1.0, 'norm_inducible'] /= 10.0\n",
     "    subfig.subplots_adjust(left=0.2, bottom=0.25, right=0.9, top=0.8)\n",
     "    fig_bm_dist_axes = subfig.subplots(ncols=2, sharey=False, gridspec_kw={'wspace': 0.5, 'width_ratios':[5, 1]})\n",
     "    for condition, noise_yloc in zip(['fig.bm.convergent', 'fig.bm.divergent', 'fig.bm.tandem_reporter_downstream', 'fig.bm.tandem_reporter_upstream'], [1,1,0.9,1.1]):\n",
@@ -778,23 +794,39 @@
     "    fig_bm_dist_axes[1].text(0.5, 0.95, 'Noise\\nratio', ha='center', ma='center', fontsize=font_sizes['data_annotation'], transform=fig_bm_dist_axes[1].transAxes)\n",
     "    fig_bm_dist_axes[1].set_xlim([0.8,1.2])\n",
     "    fig_bm_dist_axes[1].set_yscale('log')\n",
-    "    fig_bm_dist_axes[0].set_xlim([0.0, 1.0])\n",
-    "    fig_bm_dist_axes[0].set_ylim([0.0, 1.0])\n",
-    "    fig_bm_dist_axes[0].set_xticks(np.linspace(0.0,1.0,5))\n",
-    "    fig_bm_dist_axes[0].set_yticks(np.linspace(0.0,1.0,5))\n",
+    "    #fig_bm_dist_axes[0].set_xlim([0.0, 1.0])\n",
+    "    #fig_bm_dist_axes[0].set_ylim([0.0, 1.0])\n",
+    "    #fig_bm_dist_axes[0].set_xticks(np.linspace(0.0,1.0,5))\n",
+    "    #fig_bm_dist_axes[0].set_yticks(np.linspace(0.0,1.0,5))\n",
+    "\n",
+    "    if is_plasmid:\n",
+    "        fig_bm_dist_axes[0].set_xlim([0.0,35.0])\n",
+    "        fig_bm_dist_axes[0].set_ylim([0.0,35.0])\n",
+    "        fig_bm_dist_axes[0].set_xticks([1,15,30])\n",
+    "        fig_bm_dist_axes[0].set_yticks([1,15,30])\n",
+    "        fig_bm_dist_axes[0].xaxis.set_major_formatter(fold_nf_formatter(0))\n",
+    "        fig_bm_dist_axes[0].yaxis.set_major_formatter(fold_nf_formatter(0))\n",
+    "    else:\n",
+    "        fig_bm_dist_axes[0].set_xlim([0.0,1.4])\n",
+    "        fig_bm_dist_axes[0].set_ylim([0.0,1.4])\n",
+    "        fig_bm_dist_axes[0].set_xticks(np.linspace(0.0,1.0,3))\n",
+    "        fig_bm_dist_axes[0].set_yticks(np.linspace(0.0,1.0,3))\n",
+    "        fig_bm_dist_axes[0].xaxis.set_major_formatter(fold_nf_formatter(1))\n",
+    "        fig_bm_dist_axes[0].yaxis.set_major_formatter(fold_nf_formatter(1))\n",
     "\n",
     "    fig_bm_dist_axes[0].set_xlabel('Inducible gene output')\n",
     "    fig_bm_dist_axes[0].set_ylabel('Reporter output')\n",
     "\n",
     "    o_x = noise_offset[0]\n",
     "    o_y = noise_offset[1]\n",
-    "    fig_bm_dist_axes[0].annotate(text='', xytext=(0.25 + o_x, 0.05 + o_y), xy=(0.1 + o_x, 0.2 + o_y),\n",
+    "    o_s = noise_scale\n",
+    "    fig_bm_dist_axes[0].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.1) + o_x, (o_s * 0.2) + o_y),\n",
     "        arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
-    "    fig_bm_dist_axes[0].annotate(text='', xytext=(0.25 + o_x, 0.05 + o_y), xy=(0.4 + o_x, 0.2 + o_y),\n",
+    "    fig_bm_dist_axes[0].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.4) + o_x, (o_s * 0.2) + o_y),\n",
     "        arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
-    "    fig_bm_dist_axes[0].text(0.18 + o_x, 0.05 + o_y, 'int.', horizontalalignment='right', transform=fig_bm_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
-    "    fig_bm_dist_axes[0].text(0.32 + o_x, 0.05 + o_y, 'ext.', horizontalalignment='left', transform=fig_bm_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
-    "    subfig.text(0.25 + o_x, 0.20 + o_y, 'noise', horizontalalignment='center', transform=fig_bm_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "    fig_bm_dist_axes[0].text((o_s * 0.18) + o_x, (o_s * 0.05) + o_y, 'int.', horizontalalignment='right', transform=fig_bm_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "    fig_bm_dist_axes[0].text((o_s * 0.32) + o_x, (o_s * 0.05) + o_y, 'ext.', horizontalalignment='left', transform=fig_bm_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "    subfig.text((o_s * 0.25) + o_x, (o_s * 0.20) + o_y, 'noise', horizontalalignment='center', transform=fig_bm_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
     "    fig_bm_noise_axes.append(fig_bm_dist_axes[1])\n",
     "fig_bm_subfigures['D'].text(0.5, 0.85, 'Linear boundary conditions', fontsize=font_sizes['base_size'], ha='center')\n",
     "fig_bm_subfigures['C'].text(0.5, 0.85, 'Circular boundary conditions', fontsize=font_sizes['base_size'], ha='center')\n",
@@ -906,23 +938,29 @@
     "df_bm_spacing['norm_induction'] = df_bm_spacing['induction'] / (1.0 / 120.0)\n",
     "df_bm_spacing['norm_reporter']  = df_bm_spacing['constant_mRNA'] / 300.0\n",
     "df_bm_spacing['condition'] = df_bm_spacing['condition'].cat.remove_unused_categories()\n",
-    "max_spacing_median = df_bm_spacing.groupby(['condition', 'norm_induction', 'spacing']).median()['norm_reporter'].xs(10000, level='spacing')\n",
-    "df_bm_spacing['delta_reporter'] = df_bm_spacing.groupby(['condition', 'norm_induction', 'spacing'])['norm_reporter'].transform(lambda col: col - max_spacing_median.xs(col.name[0], level='condition').xs(col.name[1]))\n",
+    "max_spacing_mean = df_bm_spacing.groupby(\n",
+    "    ['condition', 'norm_induction', 'spacing']\n",
+    ").mean()['norm_reporter'].xs(10000, level='spacing')\n",
+    "df_bm_spacing['delta_reporter'] = df_bm_spacing.groupby(\n",
+    "    ['condition', 'norm_induction', 'spacing']\n",
+    "    )['norm_reporter'].transform(\n",
+    "        lambda col: col - max_spacing_mean.xs(col.name[0], level='condition').xs(col.name[1])\n",
+    "    )\n",
     "\n",
     "fig_bm_subfigures['F'].subplots_adjust(left=0.1, bottom=0.35, right=0.85, top=0.75)\n",
     "fig_bm_spacing_axes = fig_bm_subfigures['F'].subplots(ncols=4, sharey=True)\n",
     "for condition, ax in zip(['fig.bm.spacing.convergent', 'fig.bm.spacing.divergent', 'fig.bm.spacing.tandem_reporter_upstream', 'fig.bm.spacing.tandem_reporter_downstream'], fig_bm_spacing_axes):\n",
     "    ax.axhline(0, color=fig_bm_palette['gray'], linestyle=':')\n",
     "    sns.lineplot(data=df_bm_spacing[df_bm_spacing['condition']==condition], x='kb_spacing', y='delta_reporter', hue='norm_induction',\n",
-    "        palette=no_white_greens, hue_norm=matplotlib.colors.Normalize(vmin=0, vmax=2),\n",
+    "        palette='coolwarm', hue_norm=matplotlib.colors.Normalize(vmin=0, vmax=2),\n",
     "        legend=False, ax=ax, ci=None)\n",
     "    #ax.set_facecolor(light_palette[condition.replace('_','.').split('.')[2]])\n",
     "    sns.despine(ax=ax)\n",
     "    ax.set_xscale('log')\n",
     "    ax.set_xlabel('')\n",
     "    ax.set_xlim([0.5,10])\n",
-    "    ax.set_yticks([-0.2,0,0.1])\n",
-    "    ax.set_ylim([-0.25,0.1])\n",
+    "    ax.set_yticks([-0.5,-0.25, 0])\n",
+    "    ax.set_ylim([-0.5,0.07])\n",
     "\n",
     "plot_genes_unified(fig_bm_spacing_axes[0], [(0.3, 0.4), (0.7, 0.6)], [fig_bm_palette[c] for c in ['gray', 'fig.bm.convergent']], base_line_extents=(0.1,0.9), plot_dx=(0,1), plot_inducible=0)\n",
     "plot_genes_unified(fig_bm_spacing_axes[1], [(0.4, 0.3), (0.6, 0.7)], [fig_bm_palette[c] for c in ['gray', 'fig.bm.divergent']], base_line_extents=(0.1,0.9), plot_dx=(0,1), plot_inducible=0)\n",
@@ -931,7 +969,7 @@
     "    \n",
     "# Add colorbar\n",
     "fig_bm_spacing_cbar = fig_bm_subfigures['F'].add_axes([0.87, 0.35, 0.02, 0.4])\n",
-    "fig_bm_subfigures['F'].colorbar(cm.ScalarMappable(norm=matplotlib.colors.Normalize(vmin=0, vmax=2), cmap=no_white_greens), cax=fig_bm_spacing_cbar)\n",
+    "fig_bm_subfigures['F'].colorbar(cm.ScalarMappable(norm=matplotlib.colors.Normalize(vmin=0, vmax=2), cmap='coolwarm'), cax=fig_bm_spacing_cbar)\n",
     "fig_bm_spacing_cbar.set_yticks([0,1,2])\n",
     "fig_bm_spacing_cbar.yaxis.set_major_formatter(fold_formatter)\n",
     "fig_bm_spacing_cbar.set_title('Fold\\ninduction', fontsize=font_sizes['colorbar_title'], loc='left')\n",
