Removed topoisomerase behavior from toggle switch figure

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -2547,131 +2547,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load topo dataset\n",
-    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_toggles_topo_examples.gzip').exists():\n",
-    "    topo_examples = pd.read_parquet(rd.datadir/'projects'/'tangles'/'simulations'/'fig_toggles_topo_examples.gzip')\n",
-    "    print(f'Loaded {len(topo_examples)} total example datapoints from Parquet cached file')\n",
-    "else:\n",
-    "    with h5py.File(\n",
-    "        rd.datadir/'projects'/'tangles'/'simulations'/'modeling_toggles_topo_combined.h5', 'r') as fig_toggles_topo_raw:\n",
-    "        n_examples = 5\n",
-    "        example_counts = {}\n",
-    "        topo_examples = []\n",
-    "        i = 1\n",
-    "        for group in fig_toggles_topo_raw.keys():\n",
-    "            for run in fig_toggles_topo_raw[group].values():\n",
-    "                run_shape = run['mRNA'].shape\n",
-    "                condition = run.attrs['comment'].decode('utf-8')\n",
-    "                sc_dependent = run.attrs['rates.sc_dependent']\n",
-    "                is_plasmid = run.attrs['bcs.is_circular']\n",
-    "                alpha      = run.attrs['coeff.sigma_squared']\n",
-    "                hill_n     = run.attrs['hill_coeff']\n",
-    "                mRNA_deg_factor = run.attrs['mRNA_deg_factor']\n",
-    "                topo_factor = run.attrs['topo_factor']\n",
-    "                k_val      = run.attrs['K_val']\n",
-    "                k_factor   = run.attrs['K_factor']\n",
-    "                mRNA_deg_rate = run.attrs['rates.mRNA_degradation']\n",
-    "                if 'time' in run.keys():\n",
-    "                    time = run['time']\n",
-    "                else:\n",
-    "                    time = np.linspace(0.0, 50000.0, 500)\n",
-    "                c_tup = (condition, hill_n, alpha, k_val, k_factor, topo_factor, mRNA_deg_factor)\n",
-    "                if c_tup not in example_counts or example_counts[c_tup] < n_examples:\n",
-    "                    topo_examples.append(pd.DataFrame(data={\n",
-    "                        'condition': condition,\n",
-    "                        'sc_dependent': sc_dependent,\n",
-    "                        'is_plasmid': is_plasmid,\n",
-    "                        'alpha': alpha,\n",
-    "                        'mRNA_deg_rate': mRNA_deg_rate,\n",
-    "                        'mRNA_deg_factor': mRNA_deg_factor,\n",
-    "                        'topo_factor': topo_factor,\n",
-    "                        'hill_n': hill_n,\n",
-    "                        'k_val': k_val,\n",
-    "                        'k_factor': k_factor,\n",
-    "                        'time': time,\n",
-    "                        'mRNA_1': run['mRNA'][:,0,0],\n",
-    "                        'mRNA_2': run['mRNA'][:,1,0],\n",
-    "                        'idx': i\n",
-    "                    }))\n",
-    "                    i += 1\n",
-    "                    if c_tup not in example_counts:\n",
-    "                        example_counts[c_tup] = 1\n",
-    "                    else:\n",
-    "                        example_counts[c_tup] += 1\n",
-    "        topo_examples = pd.concat(topo_examples)\n",
-    "        print(f'Loaded {len(topo_examples)} example datapoints!')\n",
-    "        topo_examples.to_parquet(rd.datadir/'projects'/'tangles'/'simulations'/'fig_toggles_topo_examples.gzip', compression='gzip')\n",
-    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_toggles_topo_summaries.gzip').exists():\n",
-    "    topo_df = pd.read_parquet(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_toggles_topo_summaries.gzip', 'fig_toggles'))\n",
-    "    print(f'Loaded {len(fig_toggles_df)} simulation runs from Parquet cached file')\n",
-    "else:\n",
-    "    pass\n",
-    "    with h5py.File(\n",
-    "        rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'modeling_toggles_topo_combined.h5', 'fig_toggles_topo_cache'), 'r') as fig_toggles_topo_raw:\n",
-    "        topo_df = []\n",
-    "        i = 0\n",
-    "        # Extract the Spearman correlation between the two mRNA values\n",
-    "        # alongside storing the mean-centered correlation and auto-correlation\n",
-    "        # of the two.\n",
-    "        for group in fig_toggles_topo_raw.keys():\n",
-    "            group_df = []\n",
-    "            for run in fig_toggles_topo_raw[group].values():\n",
-    "                run_shape = run['mRNA'].shape\n",
-    "                condition = run.attrs['comment'].decode('utf-8')\n",
-    "                alpha     = run.attrs['coeff.sigma_squared']\n",
-    "                hill_n    = run.attrs['hill_coeff']\n",
-    "                k_val     = run.attrs['K_val']\n",
-    "                k_factor  = run.attrs['K_factor']\n",
-    "                mRNA_deg_factor = run.attrs['mRNA_deg_factor']\n",
-    "                topo_factor = run.attrs['topo_factor']\n",
-    "                sc_dependent = run.attrs['rates.sc_dependent']\n",
-    "                is_plasmid = run.attrs['bcs.is_circular']\n",
-    "                mRNA_deg_rate = run.attrs['rates.mRNA_degradation']\n",
-    "                if 'time' in run.keys():\n",
-    "                    time = run['time']\n",
-    "                else:\n",
-    "                    time = np.linspace(0.0, 50000.0, 500)\n",
-    "                escape_times = np.zeros(run_shape[2])\n",
-    "                mRNA = run['mRNA'][:,:,:]\n",
-    "                for subrun in range(run_shape[2]):\n",
-    "                    mRNA_1 = mRNA[:,0,subrun]\n",
-    "                    mRNA_2 = mRNA[:,1,subrun]\n",
-    "                    basin_escape = np.nonzero(mRNA_2 > mRNA_1)[0]\n",
-    "                    if len(basin_escape) > 0:\n",
-    "                        escape_times[subrun] = time[basin_escape[0]]\n",
-    "                    else:\n",
-    "                        escape_times[subrun] = np.inf\n",
-    "                group_df.append(pd.DataFrame(data={\n",
-    "                    'condition': condition,\n",
-    "                    'sc_dependent': sc_dependent,\n",
-    "                    'is_plasmid': is_plasmid,\n",
-    "                    'alpha': alpha,\n",
-    "                    'mRNA_deg_rate': mRNA_deg_rate,\n",
-    "                    'topo_factor': topo_factor,\n",
-    "                    'hill_n': hill_n,\n",
-    "                    'k_val': k_val,\n",
-    "                    'k_factor': k_factor,\n",
-    "                    'mRNA_deg_factor': mRNA_deg_factor,\n",
-    "                    'escape_time': escape_times}))\n",
-    "            topo_df.append(pd.concat(group_df, ignore_index=True))\n",
-    "            print(f'Loaded {len(topo_df[-1])} simulations...')\n",
-    "        topo_df = pd.concat(topo_df, ignore_index=True)\n",
-    "        print(f'Loaded {len(topo_df)} total simulations!')\n",
-    "        topo_df.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_toggles_topo_summaries.gzip', 'fig_toggles_topo_cache'), compression='gzip')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Summarize escapes\n",
     "fig_toggles_escapes = fig_toggles_df.groupby([\n",
     "    'condition', 'alpha', 'mRNA_deg_factor', 'k_factor', 'hill_n']).apply(\n",
-    "        summarize_escape_times).reset_index()\n",
-    "topo_escapes = topo_df.groupby([\n",
-    "    'condition', 'alpha', 'mRNA_deg_factor', 'k_factor', 'hill_n', 'topo_factor']).apply(\n",
     "        summarize_escape_times).reset_index()"
    ]
   },
@@ -2739,16 +2617,15 @@
    "outputs": [],
    "source": [
     "# Create the overall figure, gridspec, and add subfigure labels.\n",
-    "fig_toggles = plt.figure(figsize=(6.0,9.0))\n",
-    "fig_toggles_gridspec = gridspec.GridSpec(4, 3, figure=fig_toggles,\n",
-    "    wspace=0.1, hspace=0.1, height_ratios=[1,4.0,1.0, 1.0])\n",
+    "fig_toggles = plt.figure(figsize=(6.0,7.7))\n",
+    "fig_toggles_gridspec = gridspec.GridSpec(3, 3, figure=fig_toggles,\n",
+    "    wspace=0.1, hspace=0.1, height_ratios=[1,4.0,1.0])\n",
     "fig_toggles_subfigures = {\n",
     "    'A': fig_toggles.add_subfigure(fig_toggles_gridspec[0,:]),\n",
     "    'B': fig_toggles.add_subfigure(fig_toggles_gridspec[1,:]),\n",
     "    'C': fig_toggles.add_subfigure(fig_toggles_gridspec[2,0]),\n",
     "    'D': fig_toggles.add_subfigure(fig_toggles_gridspec[2,1]),\n",
     "    'E': fig_toggles.add_subfigure(fig_toggles_gridspec[2,2]),\n",
-    "    'F': fig_toggles.add_subfigure(fig_toggles_gridspec[3,:]),\n",
     "}\n",
     "for label, subfig in fig_toggles_subfigures.items():\n",
     "    subfig.add_artist(matplotlib.text.Text(x=0, y=1,\n",
@@ -2946,55 +2823,6 @@
     "fig_toggles_deg_rate_ax.set_xticklabels(['0.1x', '1x', '10x'])\n",
     "fig_toggles_deg_rate_ax.set_xlabel('mRNA degradation rate')\n",
     "fig_toggles_deg_rate_ax.set_ylabel('Half life (s)')\n",
-    "fig_toggles.savefig('test.svg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot stability as a function of topoisomerase rate\n",
-    "fig_toggles_topo_df = topo_escapes[\n",
-    "    (topo_escapes.alpha == 0.025) &\n",
-    "    (np.abs(topo_escapes.mRNA_deg_factor - 10) < 0.001) &\n",
-    "    (np.abs(topo_escapes.k_factor - 1.0) < 0.01) &\n",
-    "    (topo_escapes.hill_n == 2.0)\n",
-    "].copy()\n",
-    "fig_toggles_subfigures['F'].subplots_adjust(left=0.3, bottom=0.25, right=0.86, top=0.6)\n",
-    "fig_toggles_topo_axes = fig_toggles_subfigures['F'].subplots(ncols=4, sharey=True)\n",
-    "for c, ax in zip(['fig.toggles.topo.convergent', 'fig.toggles.topo.divergent', 'fig.toggles.topo.tandem_reporter_upstream', 'fig.toggles.topo.tandem_reporter_downstream'], fig_toggles_topo_axes):\n",
-    "    if c.endswith('convergent') or c.endswith('divergent'):\n",
-    "        lookup_c = c.replace('fig.toggles.topo', 'fig5')\n",
-    "    else:\n",
-    "        lookup_c = c\n",
-    "    sns.lineplot(data=fig_toggles_topo_df[fig_toggles_topo_df.condition == lookup_c], x='time', y='stable_fraction', hue='topo_factor',\n",
-    "        palette=no_white_greens, estimator=None, hue_norm=matplotlib.colors.LogNorm(vmin=1.0, vmax=300), legend=None, ax=ax)\n",
-    "    sns.despine(ax=ax)\n",
-    "    ax.set_xlabel('')\n",
-    "    ax.set_xlim([10000,20000])\n",
-    "    ax.set_xticks([10000,20000])\n",
-    "    ax.xaxis.set_major_formatter(hours_formatter)\n",
-    "    if c.endswith('tandem_reporter_upstream'):\n",
-    "        plot_genes_unified(ax, [(0.35, 0.45), (0.65, 0.75)], [fig_toggles_palette[c] for c in [c, 'gray']], base_line_extents=(0.1,0.9))\n",
-    "    if c.endswith('tandem_reporter_downstream'):\n",
-    "        plot_genes_unified(ax, [(0.35, 0.45), (0.65, 0.75)], [fig_toggles_palette[c] for c in ['gray', c]], base_line_extents=(0.1,0.9))\n",
-    "    if c.endswith('convergent'):\n",
-    "        plot_genes_unified(ax, [(0.25, 0.38), (0.75, 0.62)], [fig_toggles_palette[c] for c in ['gray', c]], base_line_extents=(0.1,0.9))\n",
-    "    if c.endswith('divergent'):\n",
-    "        plot_genes_unified(ax, [(0.4, 0.3), (0.6, 0.7)], [fig_toggles_palette[c] for c in ['gray', c]], base_line_extents=(0.1,0.9))\n",
-    "fig_toggles_topo_axes[0].set_ylabel('Stable percent')\n",
-    "fig_toggles_topo_axes[0].yaxis.labelpad = 0\n",
-    "fig_toggles_topo_axes[0].set_yticks([0,1])\n",
-    "fig_toggles_topo_axes[0].set_yticklabels(['0%', '100%'])\n",
-    "fig_toggles_subfigures['F'].text(0.6, 0.84, \"Circuit architectures\", fontsize=font_sizes['subaxis_title'], horizontalalignment='center')\n",
-    "fig_toggles_subfigures['F'].text(0.6, 0.02, \"Time (hr)\", horizontalalignment='center')\n",
-    "fig_toggles_topo_cbar_ax = fig_toggles_subfigures['F'].add_axes([0.89, 0.25, 0.02, 0.35])\n",
-    "fig_toggles_subfigures['F'].colorbar(cm.ScalarMappable(norm=matplotlib.colors.LogNorm(vmin=1.0, vmax=300), cmap=no_white_greens), cax=fig_toggles_topo_cbar_ax)\n",
-    "fig_toggles_topo_cbar_ax.set_yticks([1,10,100])\n",
-    "fig_toggles_topo_cbar_ax.set_yticklabels([f'{x}x' for x in [1,10,100]])\n",
-    "fig_toggles_topo_cbar_ax.set_title('REPLACEME\\nINPOST', color='r', fontsize=8)\n",
     "fig_toggles.savefig('test.svg')"
    ]
   },
