--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3504,117 +3504,165 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for topo_type in fig_zinani_topo_examples.topo_type.unique():\n",
-    "    # Create the overall figure, gridspec, and add subfigure labels.\n",
-    "    fig_zinani_topo = plt.figure(figsize=(6.2,6.12))\n",
-    "    fig_zinani_topo_gridspec = gridspec.GridSpec(3, 6, figure=fig_zinani_topo,\n",
-    "        wspace=0.1, hspace=0.1, height_ratios=[1.0,1.0,0.8])\n",
-    "    fig_zinani_topo_subfigures = {\n",
-    "        'A': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[0,:3]),\n",
-    "        'B': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[0,3:]),\n",
-    "        'C': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[1,:]),\n",
-    "        'D': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[2,:2]),\n",
-    "        'E': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[2,2:4]),\n",
-    "        'F': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[2,4:6])\n",
+    "# Create the overall figure, gridspec, and add subfigure labels.\n",
+    "fig_zinani_topo = plt.figure(figsize=(6.4,7.5))\n",
+    "fig_zinani_topo_gridspec = gridspec.GridSpec(4, 6, figure=fig_zinani_topo,\n",
+    "    wspace=0.1, hspace=0.1, height_ratios=[1.0,2.0,1.1, 1.0])\n",
+    "fig_zinani_topo_subfigures = {\n",
+    "    'A': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[0,:3]),\n",
+    "    'B': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[0,3:]),\n",
+    "    'C': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[1,:]),\n",
+    "    'D': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[2,:]),\n",
+    "    'E': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[3,:3]),\n",
+    "    'F': fig_zinani_topo.add_subfigure(fig_zinani_topo_gridspec[3,3:]),\n",
+    "}\n",
+    "for label, subfig in fig_zinani_topo_subfigures.items():\n",
+    "    subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=font_sizes['subpanel_label'], fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
+    "topo_types = ['none', 'intragenic', 'intergenic']\n",
+    "fig_zinani_topo_palette = {\n",
+    "    'her1': '#5254a3',\n",
+    "    'her7': '#9c9ede',\n",
+    "    'matlab.Unpaired': '#AAAAAA',\n",
+    "    'matlab.Paired': main_palette['gray'],\n",
+    "    'fig.zinani.uncoupled': main_palette['light_gray'],\n",
+    "    'fig.zinani.fully-coupled': main_palette['gray'],\n",
+    "    'fig.zinani.tangles-coupled': main_palette['divergent'],\n",
+    "    **{f'fig.zinani.uncoupled.{topo}': main_palette['light_gray'] for topo in topo_types},\n",
+    "    **{f'fig.zinani.fully-coupled.{topo}': main_palette['gray'] for topo in topo_types},\n",
+    "    **{f'fig.zinani.tangles-coupled.{topo}': main_palette['divergent'] for topo in topo_types},\n",
+    "    'gray': main_palette['gray'],\n",
+    "    'background_gray': '#DDDDDD'\n",
     "    }\n",
-    "    for label, subfig in fig_zinani_topo_subfigures.items():\n",
-    "        subfig.add_artist(matplotlib.text.Text(x=0, y=1, text=f'{label}.', fontsize=font_sizes['subpanel_label'], fontweight='bold', verticalalignment='top',transform=subfig.transSubfigure))\n",
-    "    fig_zinani_topo_palette = {\n",
-    "        'her1': '#5254a3',\n",
-    "        'her7': '#9c9ede',\n",
-    "        'matlab.Unpaired': '#AAAAAA',\n",
-    "        'matlab.Paired': main_palette['gray'],\n",
-    "        'fig.zinani.uncoupled': main_palette['light_gray'],\n",
-    "        'fig.zinani.fully-coupled': main_palette['gray'],\n",
-    "        'fig.zinani.tangles-coupled': main_palette['divergent'],\n",
-    "        'gray': main_palette['gray'],\n",
-    "        'background_gray': '#DDDDDD'\n",
-    "        }\n",
-    "    plot_alpha = 0.025\n",
-    "    # Plot Zinani examples\n",
-    "    fig_zinani_topo_subfigures['C'].subplots_adjust(left=0.08, bottom=0.25, right=0.98, top=0.9)\n",
-    "    fig_zinani_topo_mRNA_axes = fig_zinani_topo_subfigures['C'].subplots(ncols=2, sharey=False, gridspec_kw={'wspace': 0.28})\n",
-    "    for ax, condition in zip(fig_zinani_topo_mRNA_axes, ['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled']):\n",
-    "        df = fig_zinani_topo_examples[(fig_zinani_topo_examples.condition == condition) & (fig_zinani_topo_examples.alpha == plot_alpha) & (fig_zinani_topo_examples.topo_type == topo_type)]\n",
-    "        idx = df.idx.unique()[2]\n",
-    "        if condition.endswith('tangles-coupled'):\n",
-    "            tangles_idx = idx\n",
-    "        sns.lineplot(data=df[df.idx == idx], x='time', y='her1_mRNA', ax=ax, color=fig_zinani_topo_palette['her1'])\n",
-    "        sns.lineplot(data=df[df.idx == idx], x='time', y='her7_mRNA', ax=ax, color=fig_zinani_topo_palette['her7'])\n",
-    "        sns.despine(ax=ax)\n",
-    "        ax.set_xlim([0, 3600*4])\n",
-    "        ax.set_xticks([3600 * x for x in [0,2,4]])\n",
-    "        ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
-    "        ax.set_xlabel('')\n",
-    "        ax.set_ylabel('')\n",
-    "    for ax in fig_zinani_topo_mRNA_axes:\n",
-    "        ax.text(0.40, 0.07, 'her1', fontsize=font_sizes['subaxis_title'], color=fig_zinani_topo_palette['her1'], transform=ax.transAxes, fontstyle='italic')\n",
-    "        ax.text(0.49, 0.07, 'her7', fontsize=font_sizes['subaxis_title'], color=fig_zinani_topo_palette['her7'], transform=ax.transAxes, fontstyle='italic')\n",
-    "        ax.set_ylim(bottom=0)\n",
-    "    #fig_zinani_topo_mRNA_axes[0].set_ylim([0,25])\n",
-    "    #fig_zinani_topo_mRNA_axes[1].set_ylim([0,90])\n",
-    "    fig_zinani_topo_mRNA_axes[0].set_ylabel('mRNA counts')\n",
-    "    fig_zinani_topo_mRNA_axes[0].yaxis.labelpad = 5\n",
-    "    fig_zinani_topo_mRNA_axes[0].set_xlabel('Time (hr)')\n",
-    "    fig_zinani_topo_mRNA_axes[1].set_xlabel('Time (hr)')\n",
-    "    fig_zinani_topo_mRNA_axes[0].text(x=0.5, y=0.98, s='Gene unpaired', color=fig_zinani_topo_palette['fig.zinani.uncoupled'], horizontalalignment='center', transform=fig_zinani_topo_mRNA_axes[0].transAxes)\n",
-    "    fig_zinani_topo_mRNA_axes[1].text(x=0.5, y=0.98, s='Gene paired', color=fig_zinani_topo_palette['fig.zinani.tangles-coupled'], horizontalalignment='center', transform=fig_zinani_topo_mRNA_axes[1].transAxes)\n",
-    "    # Plot Zinani correlation coefficient\n",
-    "    fig_zinani_topo_subfigures['D'].subplots_adjust(left=0.25, bottom=0.23, right=0.95, top=0.9)\n",
-    "    fig_zinani_topo_cc_ax = fig_zinani_topo_subfigures['D'].subplots(ncols=1)\n",
-    "    sns.violinplot(data=fig_zinani_topo_df[\n",
-    "        (fig_zinani_topo_df.topo_type == topo_type) & (fig_zinani_topo_df.alpha == plot_alpha) & ((fig_zinani_topo_df.condition == 'fig.zinani.uncoupled') | (fig_zinani_topo_df.condition == 'fig.zinani.tangles-coupled'))\n",
-    "    ],\n",
-    "        x='condition', y='spearman_corr', inner='quartile',\n",
-    "        order=['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled'],\n",
-    "        palette=fig_zinani_topo_palette, saturation=0.9,\n",
-    "        bw=0.1, ax=fig_zinani_topo_cc_ax)\n",
-    "    fig_zinani_topo_cc_ax.set_xlabel('')\n",
-    "    fig_zinani_topo_cc_ax.set_ylabel('Correlation coefficient')\n",
-    "    fig_zinani_topo_cc_ax.set_xticklabels(['Gene\\nunpaired','Gene\\npaired'])\n",
-    "    fig_zinani_topo_cc_ax.yaxis.labelpad = 0.5\n",
-    "    sns.despine(ax=fig_zinani_topo_cc_ax)\n",
-    "    # Plot amplitude\n",
-    "    fig_zinani_topo_subfigures['E'].subplots_adjust(left=0.35, bottom=0.23, right=0.95, top=0.9)\n",
-    "    fig_zinani_topo_amplitude_ax = fig_zinani_topo_subfigures['E'].subplots(ncols=1)\n",
-    "    sns.violinplot(data=fig_zinani_topo_df[\n",
-    "        (fig_zinani_topo_df.topo_type == topo_type) & (fig_zinani_topo_df.alpha == plot_alpha) & ((fig_zinani_topo_df.condition == 'fig.zinani.uncoupled') | (fig_zinani_topo_df.condition == 'fig.zinani.tangles-coupled'))\n",
-    "    ],\n",
-    "        x='condition', y='mean_amplitude', inner='quartile', scale='width', width=1.2,\n",
-    "        order=['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled'],\n",
-    "        palette=fig_zinani_topo_palette, saturation=0.9,\n",
-    "        bw=0.1, ax=fig_zinani_topo_amplitude_ax)\n",
-    "    fig_zinani_topo_amplitude_ax.set_xlabel('')\n",
-    "    fig_zinani_topo_amplitude_ax.set_ylabel('Mean oscillation amplitude')\n",
-    "    fig_zinani_topo_amplitude_ax.set_ylim([0, 40])\n",
-    "    fig_zinani_topo_amplitude_ax.set_xlim([-0.72, 1.7])\n",
-    "    fig_zinani_topo_amplitude_ax.set_xticklabels(['Gene\\nunpaired','Gene\\npaired'])\n",
-    "    sns.despine(ax=fig_zinani_topo_amplitude_ax)\n",
-    "    # Plot cross-correlation plot\n",
-    "    fig_zinani_topo_subfigures['F'].subplots_adjust(left=0.3, bottom=0.23, right=0.95, top=0.9)\n",
-    "    fig_zinani_topo_crosscorr_ax = fig_zinani_topo_subfigures['F'].subplots(ncols=1)\n",
-    "    fig_zinani_topo_crosscorr_ax.axhline(y=0, color='k')\n",
-    "    fig_zinani_topo_crosscorr_ax.axvline(x=0, color='#888888', linestyle=':')\n",
+    "zinani_facecolor_map = {k:v for k,v in zip(topo_types, ['#E0E0E0', '#F1F1F1', '#FFFFFF'])}\n",
+    "zinani_topo_map = {'none': 'No relaxation', 'intragenic': 'Intragenic', 'intergenic': 'Intergenic'}\n",
+    "plot_alpha = 0.025\n",
+    "# Plot Zinani examples\n",
+    "fig_zinani_topo_subfigures['C'].subplots_adjust(left=0.1, bottom=0.2, right=0.95, top=0.7)\n",
+    "fig_zinani_topo_mRNA_axes = fig_zinani_topo_subfigures['C'].subplots(nrows=2, ncols=3, sharex=True,\n",
+    "        gridspec_kw={'wspace': 0.15, 'hspace': 0.25})\n",
+    "for ax, condition, topo_type in zip(\n",
+    "    fig_zinani_topo_mRNA_axes.flatten(),\n",
+    "    [x for x in ['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled'] for _ in (1,2,3)],\n",
+    "    topo_types * 2\n",
+    "    ):\n",
+    "    df = fig_zinani_topo_examples[\n",
+    "            (fig_zinani_topo_examples.condition == condition) &\n",
+    "            (fig_zinani_topo_examples.alpha == plot_alpha) &\n",
+    "            (fig_zinani_topo_examples.topo_type == topo_type)\n",
+    "    ]\n",
+    "    idx = df.idx.unique()[2]\n",
+    "    if condition.endswith('tangles-coupled'):\n",
+    "        tangles_idx = idx\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her1_mRNA', ax=ax, color=fig_zinani_topo_palette['her1'])\n",
+    "    sns.lineplot(data=df[df.idx == idx], x='time', y='her7_mRNA', ax=ax, color=fig_zinani_topo_palette['her7'])\n",
+    "    sns.despine(ax=ax)\n",
+    "    ax.set_xlim([0, 3600*4])\n",
+    "    ax.set_xticks([3600 * x for x in [0,2,4]])\n",
+    "    ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
+    "    ax.set_facecolor(zinani_facecolor_map[topo_type])\n",
+    "    ax.set_xlabel('')\n",
+    "    ax.set_ylabel('')\n",
+    "\n",
+    "    if topo_type == 'none':\n",
+    "        text_y = 0.07\n",
+    "    else:\n",
+    "        text_y = 0.7\n",
+    "    # Do location-specific things\n",
+    "    if condition.endswith('uncoupled'):\n",
+    "        ax.set_ylim([0,40])\n",
+    "    else:\n",
+    "        ax.set_ylim([0,205])\n",
+    "        ax.set_yticks([0,100,200])\n",
+    "        ax.set_xlabel('Time (hr)')\n",
+    "    if topo_type != topo_types[0]:\n",
+    "        ax.set_yticklabels([])\n",
+    "    else:\n",
+    "        ax.set_ylabel('mRNA counts')\n",
+    "\n",
+    "    if condition.endswith('uncoupled'):\n",
+    "        ax.text(0.46, text_y, 'Unpaired', ha='right', fontsize=font_sizes['subaxis_title'], color=fig_zinani_topo_palette['fig.zinani.uncoupled'], transform=ax.transAxes)\n",
+    "    else:\n",
+    "        ax.text(0.46, text_y, 'Paired', ha='right', fontsize=font_sizes['subaxis_title'], color=fig_zinani_topo_palette['fig.zinani.tangles-coupled'], transform=ax.transAxes)\n",
+    "    ax.text(0.48, text_y, 'her1', fontsize=font_sizes['subaxis_title'], color=fig_zinani_topo_palette['her1'], transform=ax.transAxes, fontstyle='italic')\n",
+    "    ax.text(0.61, text_y, 'her7', fontsize=font_sizes['subaxis_title'], color=fig_zinani_topo_palette['her7'], transform=ax.transAxes, fontstyle='italic')\n",
+    "    ax.set_ylim(bottom=0)\n",
+    "fig_zinani_topo_mRNA_axes[0,0].yaxis.labelpad = 8.5\n",
+    "\n",
+    "# Plot crosscorrelation axes\n",
+    "fig_zinani_topo_subfigures['D'].subplots_adjust(left=0.1, bottom=0.32, right=0.95, top=0.86)\n",
+    "fig_zinani_topo_crosscorr_axes = fig_zinani_topo_subfigures['D'].subplots(nrows=1, ncols=3, sharey=True, gridspec_kw={'wspace': 0.15})\n",
+    "for ax, topo_type in zip(\n",
+    "    fig_zinani_topo_crosscorr_axes.flatten(),\n",
+    "    topo_types\n",
+    "    ):\n",
+    "    ax.axhline(y=0, color='k')\n",
+    "    ax.axvline(x=0, color='#888888', linestyle=':')\n",
     "    for condition in ['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled']:\n",
     "        sns.lineplot(data=fig_zinani_topo_crosscorr[\n",
     "                (fig_zinani_topo_crosscorr.topo_type == topo_type) &\n",
     "                (fig_zinani_topo_crosscorr.condition == condition) &\n",
     "                (fig_zinani_topo_crosscorr.alpha == plot_alpha)].reset_index(), x='time_delay', y='cross_correlation',\n",
-    "            hue='condition', palette=fig_zinani_topo_palette, ax=fig_zinani_topo_crosscorr_ax, ci=None, legend=None)\n",
-    "    sns.despine(ax=fig_zinani_topo_crosscorr_ax)\n",
-    "    fig_zinani_topo_crosscorr_ax.set_xlim([-4000,4000])\n",
-    "    fig_zinani_topo_crosscorr_ax.set_xticks(np.linspace(-3600,3600, 5))\n",
-    "    fig_zinani_topo_crosscorr_ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
-    "    fig_zinani_topo_crosscorr_ax.set_ylim([-.33, 0.75])\n",
-    "    fig_zinani_topo_crosscorr_ax.set_yticks(np.arange(-0.25, 1.0, 0.25))\n",
-    "    fig_zinani_topo_crosscorr_ax.set_xlabel('Time delay (hr)')\n",
-    "    fig_zinani_topo_crosscorr_ax.set_ylabel('Cross-correlation')\n",
-    "    fig_zinani_topo_crosscorr_ax.text(900, 0.6, 'Unpaired', color=fig_zinani_topo_palette['fig.zinani.uncoupled'], ha='left')\n",
-    "    fig_zinani_topo_crosscorr_ax.text(900, 0.5, 'Paired', color=fig_zinani_topo_palette['fig.zinani.tangles-coupled'], ha='left')\n",
-    "    fig_zinani_topo_subfigures['C'].text(0.5, 1.1, f'topo type: {topo_type}', ha='center', fontsize=font_sizes['subpanel_label'], fontweight='bold')\n",
-    "    fig_zinani_topo.savefig('test.svg')\n",
-    "    fig_zinani_topo.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/f'fig_zinani_topo_{topo_type}_mpl.svg', 'fig_zinani_topo'))\n",
-    "    fig_zinani_topo.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/f'fig_zinani_topo_{topo_type}_mpl.pdf', 'fig_zinani_topo'))"
+    "            hue='condition', palette=fig_zinani_topo_palette, ax=ax, ci=None, legend=None)\n",
+    "    sns.despine(ax=ax)\n",
+    "    ax.set_xlim([-4000,4000])\n",
+    "    ax.set_xticks(np.linspace(-3600,3600, 5))\n",
+    "    ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
+    "    ax.set_facecolor(zinani_facecolor_map[topo_type])\n",
+    "    ax.set_ylim([-.33, 0.75])\n",
+    "    ax.set_yticks(np.arange(-0.25, 1.0, 0.25))\n",
+    "    ax.set_xlabel('Time delay (hr)')\n",
+    "    ax.set_ylabel('Cross-correlation')\n",
+    "    ax.text(0.5, 1.1, zinani_topo_map[topo_type], ha='center', fontsize=font_sizes['subaxis_title'], transform=ax.transAxes)\n",
+    "    ax.text(900, 0.6, 'Unpaired', fontsize=font_sizes['data_annotation'], color=fig_zinani_topo_palette['fig.zinani.uncoupled'], ha='left')\n",
+    "    ax.text(900, 0.48, 'Paired', fontsize=font_sizes['data_annotation'], color=fig_zinani_topo_palette['fig.zinani.tangles-coupled'], ha='left')\n",
+    "\n",
+    "# Plot Zinani correlation coefficient\n",
+    "fig_zinani_topo_df['full_condition'] = fig_zinani_topo_df.condition + '.' + fig_zinani_topo_df.topo_type\n",
+    "zinani_plot_order = ['.'.join(reversed(x)) for x in itertools.product(\n",
+    "    ['none', 'intragenic', 'intergenic'],\n",
+    "    ['fig.zinani.uncoupled', 'fig.zinani.tangles-coupled']\n",
+    ")]\n",
+    "fig_zinani_topo_subfigures['E'].subplots_adjust(left=0.15, bottom=0.23, right=0.95, top=0.87)\n",
+    "fig_zinani_topo_cc_ax = fig_zinani_topo_subfigures['E'].subplots(ncols=1)\n",
+    "for idx, topo in enumerate(topo_types):\n",
+    "    fig_zinani_topo_cc_ax.axvspan(-0.5 + (2 * idx),1.5 + (2 * idx),color=zinani_facecolor_map[topo])\n",
+    "    fig_zinani_topo_cc_ax.text(x=0.5 + (2 * idx), y=1.03, s=zinani_topo_map[topo], ha='center', fontsize=font_sizes['subaxis_title'])\n",
+    "sns.violinplot(data=fig_zinani_topo_df[\n",
+    "    (fig_zinani_topo_df.alpha == plot_alpha) &\n",
+    "    ((fig_zinani_topo_df.condition == 'fig.zinani.uncoupled') | (fig_zinani_topo_df.condition == 'fig.zinani.tangles-coupled'))\n",
+    "],\n",
+    "    x='full_condition', y='spearman_corr', inner='quartile', scale='width', width=0.8,\n",
+    "    order=zinani_plot_order,\n",
+    "    palette=fig_zinani_topo_palette, saturation=0.9,\n",
+    "    bw=0.1, ax=fig_zinani_topo_cc_ax)\n",
+    "fig_zinani_topo_cc_ax.set_xlabel('')\n",
+    "fig_zinani_topo_cc_ax.set_ylabel('Correlation coefficient')\n",
+    "fig_zinani_topo_cc_ax.set_xticklabels(['Gene\\nunpaired','Gene\\npaired'] * 3)\n",
+    "fig_zinani_topo_cc_ax.yaxis.labelpad = 0.5\n",
+    "fig_zinani_topo_cc_ax.set_ylim([-0.6, 1.2])\n",
+    "sns.despine(ax=fig_zinani_topo_cc_ax)\n",
+    "# Plot amplitude\n",
+    "fig_zinani_topo_subfigures['F'].subplots_adjust(left=0.15, bottom=0.23, right=0.95, top=0.87)\n",
+    "fig_zinani_topo_amplitude_ax = fig_zinani_topo_subfigures['F'].subplots(ncols=1)\n",
+    "for idx, topo in enumerate(topo_types):\n",
+    "    fig_zinani_topo_amplitude_ax.axvspan(-0.5 + (2 * idx),1.5 + (2 * idx),color=zinani_facecolor_map[topo])\n",
+    "    fig_zinani_topo_amplitude_ax.text(x=0.5 + (2 * idx), y=45, s=zinani_topo_map[topo], ha='center', fontsize=font_sizes['subaxis_title'])\n",
+    "sns.violinplot(data=fig_zinani_topo_df[\n",
+    "    (fig_zinani_topo_df.alpha == plot_alpha) &\n",
+    "    ((fig_zinani_topo_df.condition == 'fig.zinani.uncoupled') | (fig_zinani_topo_df.condition == 'fig.zinani.tangles-coupled'))\n",
+    "],\n",
+    "    x='full_condition', y='mean_amplitude', inner='quartile', scale='width', width=0.8,\n",
+    "    order=zinani_plot_order,\n",
+    "    palette=fig_zinani_topo_palette, saturation=0.9,\n",
+    "    bw=0.1, ax=fig_zinani_topo_amplitude_ax)\n",
+    "fig_zinani_topo_amplitude_ax.set_xlabel('')\n",
+    "fig_zinani_topo_amplitude_ax.set_ylabel('Oscillation amplitude')\n",
+    "fig_zinani_topo_amplitude_ax.set_ylim([0, 50])\n",
+    "fig_zinani_topo_amplitude_ax.set_xticklabels(['Gene\\nunpaired','Gene\\npaired'] * 3)\n",
+    "sns.despine(ax=fig_zinani_topo_amplitude_ax)\n",
+    "fig_zinani_topo.savefig('test.svg')\n",
+    "fig_zinani_topo.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/f'fig_zinani_topo_mpl.svg', 'fig_zinani_topo'))\n",
+    "fig_zinani_topo.savefig(rd.outfile(rd.rootdir/'writeups'/'figures'/'modeling_paper'/f'fig_zinani_topo_mpl.pdf', 'fig_zinani_topo'))"
    ]
   },
   {
@@ -4287,7 +4335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('env': venv)",
+   "display_name": "Python 3.7.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -4301,11 +4349,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "552d033f0034964c96fa57f53a6bfcfef78d3592856811826dcb283bee174cfa"
+    "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
    }
   }
  },
